fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ a.pure-button-primary:hover {
 }
 
 .grid-container {
-    margin-top: 200px !important;
+    margin-top: 100px !important;
 }
 
 .home-menu a {
